--- a/EasyLearn/UI/CustomControls/Dictionaries/CommonDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/CommonDictionaryView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EasyLearn.UI.CustomControls.UserView"
+﻿<UserControl x:Class="EasyLearn.UI.CustomControls.CommonDictionaryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,15 +6,16 @@
              xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
-             mc:Ignorable="d">
-    
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
     <materialDesign:Flipper Style="{DynamicResource MaterialDesignCardFlipper}" 
                             materialDesign:ShadowAssist.ShadowDepth="Depth2"
-                            Margin="17 10 0 0">
+                            Margin="17 10 0 0"
+                            Height="256"
+                            Width="200">
 
-        <!--Лицевая сторона карточки-->
         <materialDesign:Flipper.FrontContent>
+
             <Grid Height="256" Width="200">
 
                 <Grid.RowDefinitions>
@@ -22,16 +23,18 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
+
                 <!--Пространство с картинкой и закрашенным фоном-->
                 <materialDesign:ColorZone Mode="PrimaryLight" VerticalAlignment="Stretch">
 
-                    <materialDesign:PackIcon Kind="AccountCircle" 
+                    <materialDesign:PackIcon Kind="Star" 
                                              Height="128" 
                                              Width="128"
                                              VerticalAlignment="Center" 
                                              HorizontalAlignment="Center" />
 
                 </materialDesign:ColorZone>
+
 
                 <!--Кнопка перехода на заднюю сторону карточки (настройки аккаунта)-->
                 <Button Style="{DynamicResource MaterialDesignFlatButton}"
@@ -60,6 +63,7 @@
 
                 </Button>
 
+
                 <!--Пространство под картинкой аккаунта-->
                 <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
 
@@ -72,47 +76,13 @@
                     <StackPanel Orientation="Horizontal"
                                 HorizontalAlignment="Center"
                                 Grid.Row="0">
-                        <TextBlock Text="{Binding Name}" FontSize="13"/>
-                        <!--<TextBlock Text="{Binding LastName}" FontSize="13" Margin="4 0 0 0"/>-->
+                        <TextBlock Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Text="{Binding Name}" FontSize="15"/>
                     </StackPanel>
-
-                    <!--Кнопка авторизации на аккаунте-->
-                    <Button Style="{DynamicResource MaterialDesignFlatButton}"                            
-                            Foreground="Black"
-                            HorizontalAlignment="Center"
-                            Content="Войти"
-                            Visibility="{Binding IsCurrent, Converter={converters:ReverseVisibilityConverter}}"
-                            Grid.Row="1"
-                            Margin="0 3 0 0"
-                            ToolTip="Войти на аккаунт"
-                            Command="{Binding SetUserAsCurrentCommand}"
-                            CommandParameter="{Binding Id}"/>
-
-                    <!--Надпись "текущий аккаунт"-->
-                    <StackPanel Orientation="Horizontal"
-                                Grid.Row="1"
-                                Visibility="{Binding IsCurrent, Converter={converters:ForwardVisibilityConverter}}"
-                                HorizontalAlignment="Center"
-                                Margin="0 3 0 0">
-
-                        <TextBlock Text="Текущий аккаунт"                             
-                               FontSize="15"
-                               Margin="0 5 0 0"
-                               FontWeight="Bold"
-                               Foreground="ForestGreen"/>
-
-                        <materialDesign:PackIcon Kind="CheckCircle" 
-                                                 Width="14" Height="14"
-                                                 Margin="4 0 0 0"
-                                                 Foreground="ForestGreen"
-                                                 VerticalAlignment="Center"/>
-
-                    </StackPanel >
-
 
                 </Grid>
 
             </Grid>
+
         </materialDesign:Flipper.FrontContent>
 
         <!--Задняя сторона карточки-->
@@ -166,6 +136,9 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
 
+
+                    <TextBlock Text="{Binding Description}" Style="{DynamicResource MaterialDesignBody2TextBlock}" FontSize="10"/>
+
                     <!--Текстбокс для изменения имени аккаунта-->
                     <!--<TextBox materialDesign:HintAssist.Hint="Имя" 
                              materialDesign:HintAssist.IsFloating="True"
@@ -214,24 +187,52 @@
 
                 </Grid>
 
-                <!--Кнопка удаления аккаунта-->
-                <Button Grid.Row="2" 
-                        Margin="30 12 30 12" 
-                        Command="{Binding RemoveUserCommand}"
-                        CommandParameter="{Binding Id}"
-                        Foreground="Red"
-                        Style="{DynamicResource MaterialDesignFlatButton}"
-                        ToolTip="Удалить аккаунт"
-                        VerticalAlignment="Bottom">
+                <Grid Grid.Row="2" HorizontalAlignment="Stretch">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
 
-                    <StackPanel Orientation="Horizontal">
+                    <!--Кнопка удаления аккаунта-->
+                    <Button Command="{Binding RemoveCommonDictionaryCommand}"
+                            CommandParameter="{Binding Id}"
+                            Foreground="Red"
+                            Style="{DynamicResource MaterialDesignFlatButton}"
+                            ToolTip="Удалить"
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Center"
+                            Grid.Column="0">
 
-                        <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                        <StackPanel Orientation="Horizontal">
 
-                    </StackPanel>
+                            <TextBlock Text="Удалить" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <materialDesign:PackIcon Kind="Trash" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
 
-                </Button>
+                        </StackPanel>
+
+                    </Button>
+
+                    <!--Кнопка открытия-->
+                    <Button HorizontalAlignment="Center"
+                            Command="{Binding OpenCurrentCommonDictionaryCommand}"
+                            CommandParameter="{Binding Id}"
+                            Foreground="ForestGreen"
+                            Style="{DynamicResource MaterialDesignFlatButton}"
+                            ToolTip="Открыть"
+                            VerticalAlignment="Center"
+                            Grid.Column="1">
+
+                        <StackPanel Orientation="Horizontal">
+
+                            <TextBlock Text="Открыть" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                            <materialDesign:PackIcon Kind="Pencil" Height="18" Width="18" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+
+                        </StackPanel>
+
+                    </Button>
+                </Grid>
+
+
 
             </Grid>
         </materialDesign:Flipper.BackContent>
