--- a/EasyLearn/UI/CustomControls/Dictionaries/IrregularVerbDictionaryView.xaml
+++ b/EasyLearn/UI/CustomControls/Dictionaries/IrregularVerbDictionaryView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="EasyLearn.UI.CustomControls.UserView"
+﻿<UserControl x:Class="EasyLearn.UI.CustomControls.IrregularVerbDictionaryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,15 +6,20 @@
              xmlns:local="clr-namespace:EasyLearn.UI.CustomControls"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:converters="clr-namespace:EasyLearn.Infrastructure.ValueConverters"
-             mc:Ignorable="d">
-    
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
+
     <materialDesign:Flipper Style="{DynamicResource MaterialDesignCardFlipper}" 
                             materialDesign:ShadowAssist.ShadowDepth="Depth2"
-                            Margin="17 10 0 0">
+                            Margin="17 10 0 0"
+                            Height="256"
+                            Width="200">
 
-        <!--Лицевая сторона карточки-->
+
+
+
         <materialDesign:Flipper.FrontContent>
+
             <Grid Height="256" Width="200">
 
                 <Grid.RowDefinitions>
@@ -22,10 +27,11 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
 
-                <!--Пространство с картинкой и закрашенным фоном-->
-                <materialDesign:ColorZone Mode="PrimaryLight" VerticalAlignment="Stretch">
 
-                    <materialDesign:PackIcon Kind="AccountCircle" 
+                <!--Пространство с картинкой и закрашенным фоном-->
+                <materialDesign:ColorZone Mode="PrimaryDark" VerticalAlignment="Stretch">
+
+                    <materialDesign:PackIcon Kind="Yahoo" 
                                              Height="128" 
                                              Width="128"
                                              VerticalAlignment="Center" 
@@ -33,32 +39,16 @@
 
                 </materialDesign:ColorZone>
 
-                <!--Кнопка перехода на заднюю сторону карточки (настройки аккаунта)-->
-                <Button Style="{DynamicResource MaterialDesignFlatButton}"
-                        HorizontalAlignment="Right"
-                        VerticalAlignment="Top"
-                        Foreground="Black"
-                        Width="30"
-                        Height="30"
-                        Padding="1"
-                        Margin="0 6 6 0"
-                        ToolTip="Настройки аккаунта">
 
-                    <materialDesign:PackIcon Kind="AccountDetails" 
-                                             Width="22" 
-                                             Height="22"
-                                             HorizontalAlignment="Center"
-                                             VerticalAlignment="Center"/>
+                <materialDesign:PackIcon Kind="Star" 
+                                         HorizontalAlignment="Right"
+                                         VerticalAlignment="Top"
+                                         Foreground="Gold"
+                                         Width="30"
+                                         Height="30"
+                                         Padding="1"
+                                         Margin="0 6 6 0"/>
 
-                    <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="Click">
-                            <i:InvokeCommandAction Command="{x:Static materialDesign:Flipper.FlipCommand}"/>
-                            <!--<i:InvokeCommandAction Command="{Binding UpdateIntermediatesCommand}"/>
-                            <i:InvokeCommandAction Command="{Binding UpdateGoBackButtonIsEnabledCommand}"/>-->
-                        </i:EventTrigger>
-                    </i:Interaction.Triggers>
-
-                </Button>
 
                 <!--Пространство под картинкой аккаунта-->
                 <Grid Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">
@@ -72,47 +62,17 @@
                     <StackPanel Orientation="Horizontal"
                                 HorizontalAlignment="Center"
                                 Grid.Row="0">
-                        <TextBlock Text="{Binding Name}" FontSize="13"/>
-                        <!--<TextBlock Text="{Binding LastName}" FontSize="13" Margin="4 0 0 0"/>-->
+                        <TextBlock Style="{DynamicResource MaterialDesignHeadline6TextBlock}" Text="Неправильные глаоголы" FontSize="15
+                               "/>
                     </StackPanel>
 
-                    <!--Кнопка авторизации на аккаунте-->
-                    <Button Style="{DynamicResource MaterialDesignFlatButton}"                            
-                            Foreground="Black"
-                            HorizontalAlignment="Center"
-                            Content="Войти"
-                            Visibility="{Binding IsCurrent, Converter={converters:ReverseVisibilityConverter}}"
-                            Grid.Row="1"
-                            Margin="0 3 0 0"
-                            ToolTip="Войти на аккаунт"
-                            Command="{Binding SetUserAsCurrentCommand}"
-                            CommandParameter="{Binding Id}"/>
 
-                    <!--Надпись "текущий аккаунт"-->
-                    <StackPanel Orientation="Horizontal"
-                                Grid.Row="1"
-                                Visibility="{Binding IsCurrent, Converter={converters:ForwardVisibilityConverter}}"
-                                HorizontalAlignment="Center"
-                                Margin="0 3 0 0">
-
-                        <TextBlock Text="Текущий аккаунт"                             
-                               FontSize="15"
-                               Margin="0 5 0 0"
-                               FontWeight="Bold"
-                               Foreground="ForestGreen"/>
-
-                        <materialDesign:PackIcon Kind="CheckCircle" 
-                                                 Width="14" Height="14"
-                                                 Margin="4 0 0 0"
-                                                 Foreground="ForestGreen"
-                                                 VerticalAlignment="Center"/>
-
-                    </StackPanel >
 
 
                 </Grid>
 
             </Grid>
+
         </materialDesign:Flipper.FrontContent>
 
         <!--Задняя сторона карточки-->
