--- a/EasyLearn/UI/Pages/DictionariesPage.xaml
+++ b/EasyLearn/UI/Pages/DictionariesPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="EasyLearn.UI.Pages.ListsPage"
+﻿<Page x:Class="EasyLearn.UI.Pages.DictionariesPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,7 +15,7 @@
 
         <Grid>
 
-            <ItemsControl ItemsSource="{Binding Lists}" 
+            <ItemsControl ItemsSource="{Binding Dictionaries}" 
                   VerticalContentAlignment="Top"
                   HorizontalContentAlignment="Left">
                 <ItemsControl.ItemsPanel>
@@ -35,7 +35,7 @@
                 BorderBrush="ForestGreen"
                 Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}">
 
-                <materialDesign:PackIcon Kind="AccountPlus"
+                <materialDesign:PackIcon Kind="Dictionary"
                                          Height="30"
                                          Width="30"
                                          Margin="0 0 6 2"/>
@@ -44,13 +44,13 @@
                 <Button.CommandParameter>
                     <StackPanel Margin="10 10 10 0">
 
-                        <!--Имя списка слов-->
+                        <!--Имя словаря-->
                         <TextBox Style="{DynamicResource MaterialDesignFloatingHintTextBox}"
                                  Width="200" 
                                  materialDesign:HintAssist.Hint="Название">
 
                             <TextBox.Text>
-                                <Binding Path="NewListName" UpdateSourceTrigger="PropertyChanged">
+                                <Binding Path="NewDictionaryName" UpdateSourceTrigger="PropertyChanged">
                                     <!--<Binding.ValidationRules>
                                         <local:NotEmptyValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True" />
                                         <local:MaxSymbolValidationRuleForAddAccountWindow ValidatesOnTargetUpdated="True"/>
@@ -73,48 +73,16 @@
                                  VerticalScrollBarVisibility="Auto"
                                  materialDesign:HintAssist.Hint="Описание"
                                  materialDesign:HintAssist.IsFloating="True"
-                                 Text="{Binding NewListDescription}"/>
+                                 Text="{Binding NewDictionaryDescription}"/>
 
                         <!--Выбор "обычный список/список с предлогами"-->
                         <ComboBox Grid.Row="0" 
                                   materialDesign:HintAssist.Hint="Тип списка" 
                                   materialDesign:HintAssist.IsFloating="True"
                                   MaxDropDownHeight="200"
-                                  Margin="4 4 4 0">
-
-                            <ComboBoxItem Content="Обычный список" IsSelected="{Binding NewListIsCommon, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Предлоги" IsSelected="{Binding NewListIsPrepositionsList, Mode=TwoWay}"/>
-
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="SelectionChanged">
-                                    <i:InvokeCommandAction Command="{Binding SortCommand}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
-
-                        </ComboBox>
-
-                        <ComboBox Grid.Row="0" 
-                                  materialDesign:HintAssist.Hint="Тип содержимого списка" 
-                                  materialDesign:HintAssist.IsFloating="True"
-                                  MaxDropDownHeight="200"
                                   Margin="4 4 4 0"
-                                  Visibility="{Binding CommonWordListTypeComboBoxIsCollapsed, Converter={converters:ForwardCollapseConverter}}">
-
-                            <ComboBoxItem Content="Все типы" IsSelected="{Binding NewListHasNoType, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Местоимения" IsSelected="{Binding NewListWithPronouns, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Глаголы" IsSelected="{Binding NewListWithVerbs, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Существительные" IsSelected="{Binding NewListWithNouns, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Прилагательные" IsSelected="{Binding NewListWithAdjectives, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Слоосочетания" IsSelected="{Binding NewListWithConbinationsOfWords, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Предложения" IsSelected="{Binding NewListWithSentences, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Числительные" IsSelected="{Binding NewListWithNumerals, Mode=TwoWay}"/>
-                            <ComboBoxItem Content="Наречия" IsSelected="{Binding NewListWithAdverbs, Mode=TwoWay}"/>
-
-                            <i:Interaction.Triggers>
-                                <i:EventTrigger EventName="SelectionChanged">
-                                    <i:InvokeCommandAction Command="{Binding SortCommand}"/>
-                                </i:EventTrigger>
-                            </i:Interaction.Triggers>
+                                  ItemsSource="{Binding DictionaryTypes}"
+                                  SelectedItem="{Binding SelectedDictionaryType}">
 
                         </ComboBox>
 
@@ -130,7 +98,7 @@
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
-                                        <i:InvokeCommandAction Command="{Binding ClearNewListWindow}"/>
+                                        <i:InvokeCommandAction Command="{Binding CleanDictionaryAddingWindowCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
 
@@ -146,7 +114,7 @@
                                     <i:EventTrigger EventName="Click">
                                         <i:InvokeCommandAction Command="{x:Static materialDesign:DialogHost.CloseDialogCommand}"/>
                                         <i:InvokeCommandAction Command="{Binding CreateNewList}"/>
-                                        <i:InvokeCommandAction Command="{Binding ClearNewListWindow}"/>
+                                        <i:InvokeCommandAction Command="{Binding CleanDictionaryAddingWindowCommand}"/>
                                     </i:EventTrigger>
                                 </i:Interaction.Triggers>
 
